--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "index",
-  "version": "1.0.0",
+  "name": "the-index",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt generate",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "vercel": "vercel dev",
+    "deploy": "vercel deploy --prod"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
@@ -14,12 +16,10 @@
     "cheerio": "^1.0.0-rc.5",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
-    "showdown": "^1.9.1",
-    "x-ray": "^2.3.4"
+    "showdown": "^1.9.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
-    "@types/x-ray": "^2.3.3",
     "@nuxt/typescript-build": "^2.0.4",
     "@nuxtjs/vuetify": "^1.11.3",
     "@types/showdown": "^1.9.3",
